[package]
name = "rle-decode-fast"
version = "1.0.3"
authors = ["Moritz Wanzenböck <moritz@wanzenbug.xyz>"]
edition = "2015"
license = "MIT OR Apache-2.0"
description = """
Deprecated: this is available in stable Rust since 1.53 as Vec::extend_from_within().

Previsouly, the fastest way to implement any kind of decoding for Run Length Encoded data in Rust.
"""
repository = "https://github.com/WanzenBug/rle-decode-helper"
readme = "README.md"

[[bench]]
name = "bench"
harness = false
required-features = ["bench"]

[features]
bench = ["criterion"]

[badges]
maintenance = { status = "deprecated" }

[dependencies]
criterion = { version = "0.2", optional = true }
